<resources>
    <string name="app_name">EI</string>
    <string name="app_name_full">Element Inspector</string>
    <string name="hint_search">Enter url or request</string>
    <string name="hint_write_js">Write javascript source</string>
    <string name="hint_write_html">Write html</string>
    <string name="hint_find_to_page">Enter text</string>
    <string name="hint_cookie_name">Name</string>
    <string name="hint_cookie_value">Value</string>
    <string name="hint_no_content">No data.</string>
    <string name="hint_other_search_engine_home">Home page (https://domain.com/search)</string>
    <string name="hint_other_search_engine_search">Search page (https://domain.com/search?s=%20)</string>
    <string name="hint_enter_domain_whois">Enter domain or IP (domain.com / 127.0.0.1)</string>
    <string name="hint_enter_useragent">Enter a other UserAgent</string>
    <string name="hint_enter_name_file">Enter name file (filename.txt)</string>
    <string name="hint_error_search_engine_other_empty">This field cannot be empty!</string>
    <string name="hint_error_search_engine_other_search_20">This field must contain the value \"%20\"!</string>
    <string name="hint_error_search_engine_other_url_invalid">This field contains a strange link!</string>
    <string name="loading_page">Loading</string>
    <string name="belarus">MIXNO Dev. 2020-2021</string>
    <string name="action_console">Console</string>
    <string name="action_console_eruda">Console Eruda</string>
    <string name="action_console_firebug">Console FireBug</string>
    <string name="action_element_editor">Element editor(beta)</string>
    <string name="action_style_editor">Style editor(beta)</string>
    <string name="action_contenteditable">Content editable</string>
    <string name="action_highlight_border">Highlight border</string>
    <string name="action_source_page">Source page</string>
    <string name="action_desktop_version">Desktop version</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_feedback_and_help">Help &amp; Feedback</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_what_app">What it application</string>
    <string name="action_debug_mode">Debug mode</string>
    <string name="action_additions">Additions</string>
    <string name="action_clear_back_history">Clear history</string>
    <string name="action_for_developer">For developers</string>
    <string name="action_find_to_page">Find to page</string>
    <string name="action_history">History</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="action_ons">On</string>
    <string name="action_offs">Off</string>
    <string name="action_certificate">Certificate</string>
    <string name="action_whois_domain">Whois</string>
    <string name="action_save">Save</string>
    <string name="action_download">Download</string>
    <string name="action_inner">Inner</string>
    <string name="action_parent">Parent</string>
    <string name="action_ok">Ok</string>
    <string name="action_continue">Continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_clear">Clear</string>
    <string name="action_restart">Restart</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_remove_all_tabs">Remove all tabs</string>
    <string name="action_what_is_it">What is it?</string>
    <string name="action_copy">Copy</string>
    <string name="action_request_post">Request POST</string>
    <string name="action_request_get">Request GET</string>
    <string name="action_requests">Request\'s</string>
    <string name="action_create_addon">Create add-on</string>
    <string name="action_option_search_new">New</string>
    <string name="action_option_search_old">Old</string>
    <string name="action_viewsource">View Source</string>
    <string name="action_block_history">Block history</string>
    <string name="action_unblock_history">Unblock history</string>
    <string name="action_send_app_debug">Send debug</string>
    <string name="action_javascript">JavaScript</string>
    <string name="action_create_javascript">Create</string>
    <string name="action_store_javascript">Store</string>
    <string name="action_import_javascript">Import</string>
    <string name="action_dev_tools">DevTools(beta)</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_useragent">UserAgent(beta)</string>
    <string name="action_donate">Donate</string>
    <string name="action_source_code">Source code | GitHub</string>
    <string name="action_cookie_manager">Cookies</string>
    <string name="action_cookie_new">New cookie</string>
    <string name="action_clear_data">Clear data</string>
    <string name="action_add_search_engine_other">Save</string>
    <string name="action_javascript_store_online">Online</string>
    <string name="action_javascript_store_installed">Installed</string>
    <string name="action_support_project">Support project</string>
    <string name="action_load_html">Load HTML</string>
    <string name="action_load_html_replace">Replace</string>
    <string name="action_load_html_append">Append</string>
    <string name="action_unlock_hide_functions">Unlock hide functions</string>
    <string name="action_unlock_hide_function_0">Locked</string>
    <string name="action_unlock_hide_function_1">Unlocked</string>
    <string name="action_search">Search</string>
    <string name="action_useragent_new">Add other UserAgent</string>
    <string name="action_menu_open">Open</string>
    <string name="action_menu_copy">Copy</string>
    <string name="action_menu_copy_url">Copy URL</string>
    <string name="action_menu_open_in">Open in</string>
    <string name="action_menu_open_in_new_tab">Open in new tab</string>
    <string name="action_menu_remove">Delete</string>
    <string name="action_menu_share">Share</string>
    <string name="action_menu_run">Run</string>
    <string name="action_menu_edit">Edit</string>
    <string name="param_file_size">File size: %1$s</string>
    <string name="param_mime_type_file">MimeType file: %1$s</string>
    <string name="ssl_check_warning_title">Not secure connection</string>
    <string name="ssl_check_ok_title">The connection is secure</string>
    <string name="ssl_check_warning_message">The connection to the site %1$s is not secure. fraudsters can steal bank numbers, etc...</string>
    <string name="ssl_check_ok_message">The connection to the site %1$s is secure, the data you submit is secure...</string>
    <string name="message_console">Use the console to view site errors and execute some commands, to successfully work with the console, you need at least an initial level of knowledge in javascript</string>
    <string name="message_contenteditable">Edit the site content, more precisely its image text without programming knowledge in the web environment</string>
    <string name="message_source_page">View, edit the source code of any page on the site</string>
    <string name="message_highlight_border">Highlighting the borders of all elements on the page, now you can find out which element and where it ends!</string>
    <string name="message_what_app">This application was created for editing site pages on the user side, you can not harm the site itself in any way, this application was created exclusively from the entertainment side. You can change the site or change its operation useing the editing page of the site or using commands through the console</string>
    <string name="message_debug_mode">How to work with Debug mode? First, go to the application settings and enable this function, then restart the application, open a browser on your computer, enter chrome://inspect/#devices or chrome://tracing in the address bar. For this function, you need to enable USB debugging</string>
    <string name="message_storage_problem">If you have problems with tabs or history. Try to solve it like this: Open device SETTINGS->APPS->THIS APP->PERMISSIONS->ON PERMISSION FOR STORAGE. If this permission has already been granted, disable it and enable it again.</string>
    <string name="message_save_session">this function will allow you not to lose the open link, event after closing the application. When you launch the application, the last opening link will open automatically.</string>
    <string name="message_element_editor">Through this function, you can edit the source code of a specific element on the page.</string>
    <string name="message_clear_data">Choose what you want to clear.</string>
    <string name="message_clear_data_cache">Clear the entire application cache (picture, saved pages, etc.)</string>
    <string name="message_clear_data_cookies">Clear all cookies - many pages/sites will have to recreate them, and all passwords and authorized accounts will be reset.</string>
    <string name="message_clear_data_session">Clear all sessions - many pages/sites will have to recreate them, and all passwords and authorized accounts will be reset.</string>
    <string name="message_clear_data_history">Clear all history - the entire visit history will be deleted. You will no longer be able to see which pages you visited.</string>
    <string name="message_select_format_cache_webview">Select the load page caching format.</string>
    <string name="title_clear_data_cache">Clear cache</string>
    <string name="title_clear_data_cookies">Clear cookies</string>
    <string name="title_clear_data_session">Clear session</string>
    <string name="title_clear_data_history">Clear history</string>
    <string name="cache_mode_default">Default</string>
    <string name="cache_mode_no_cache">No cache</string>
    <string name="cache_mode_cache_only">Cache only</string>
    <string name="cache_mode_cache_else_network">Cache else network</string>
    <string name="preference_app">Application</string>
    <string name="preference_other">Other</string>
    <string name="preference_web">Web</string>
    <string name="preference_view">View</string>
    <string name="preference_debug_mode">Debug mode</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_theme_webview">Theme web content</string>
    <string name="preference_save_session">Save session</string>
    <string name="preference_search_engine">Search engine</string>
    <string name="preference_app_about">About application</string>
    <string name="preference_view_bottom_bar">Bottom menu bar</string>
    <string name="preference_link_text">Visible bottom text with link</string>
    <string name="preference_grant_permissions">Grant permissions</string>
    <string name="preference_search_request_processing_option">Search request processing option</string>
    <string name="preference_pc_version">New PC version option</string>
    <string name="preference_summary_save_session">Remember last open link (excluding tabs)</string>
    <string name="preference_summary_pc_version">New processing of the PC version, will allow you to replace the site address and search for mobile mentions</string>
</resources>