<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_clear_data"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <CheckBox
                android:id="@+id/checkboxCache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/title_clear_data_cache"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/message_clear_data_cache"
                android:layout_marginLeft="32dp"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?dividerHorizontal"/>

            <CheckBox
                android:id="@+id/checkboxSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/title_clear_data_session"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/message_clear_data_session"
                android:layout_marginLeft="32dp"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?dividerHorizontal"/>

            <CheckBox
                android:id="@+id/checkboxCookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/title_clear_data_cookies"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/message_clear_data_cookies"
                android:layout_marginLeft="32dp"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?dividerHorizontal"/>

            <CheckBox
                android:id="@+id/checkboxHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/title_clear_data_history"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/message_clear_data_history"
                android:layout_marginLeft="32dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_clear_data"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/colorAccent"
                android:stateListAnimator="@null"
                tools:targetApi="lollipop"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>