<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_offs"
                android:background="@color/colorAccent"
                android:textColor="@color/buttonTextColor"
                android:theme="@style/SettingsSwitchTheme"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp"
                android:textOn="@string/action_ons"
                android:textOff="@string/action_offs"
                android:paddingBottom="20dp"/>

            <LinearLayout
                android:id="@+id/otherContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_select_format_cache_webview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>

                <RadioGroup
                    android:id="@+id/cacheGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <RadioButton
                        android:id="@+id/cacheDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_mode_default"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/cacheNoCache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_mode_no_cache"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/cacheCacheOnly"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_mode_cache_only"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/cacheCacheElseNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_mode_cache_else_network"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>